<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_devices"
            android:icon="@drawable/ic_device_type_other_sensor"
            android:title="@string/menu_my_devices" />
        <item
            android:id="@+id/nav_my_bikes"
            android:icon="@drawable/ic_menu_add_device"
            android:title="@string/my_bikes" />
        <item
            android:id="@+id/nav_add_device"
            android:icon="@drawable/ic_menu_add_device"
            android:title="@string/menu_add_device" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@id/nav_settings"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Quit" />

        </menu>

    </item>

</menu>